--- a/src/main/resources/massages_ja.properties
+++ b/src/main/resources/massages_ja.properties
@@ -1,6 +1,8 @@
 # page title
 login.login.title = ログイン
 login.administor.title = 管理人ログイン
+logout.done = ログアウトしました。
+login.failure = ログインに失敗しました。正しいユーザー名とパスワードを入力してください
 customer.index.title = 顧客情報一覧
 customer.detail.title = 詳細
 customer.create.title = 新規登録
