新規登録機能を追加

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,9 @@
 # page title
 login.login.title = Login
 login.administor.title = AdministorLogin
+logout.done = Logout
+login.failure = Login Failured
+login.notfound = ID Not Found
 customer.index.title = Customer List
 customer.detail.title = detail
 customer.create.title = Create
@@ -24,7 +27,7 @@ tel_no = TELNUMBER
 birth_date = BIRTHDATE
 home_address = HOMEADDRESS
 post_number = POSTNUMBER
-reg_dete = REGDATE
+reg_date = REGDATE
 user_id = USERID
 password = PASSWORD
 
