--- a/src/main/resources/messages_ja.properties
+++ b/src/main/resources/messages_ja.properties
@@ -2,12 +2,13 @@
 login.login.title = ログイン
 login.administor.title = 管理人ログイン
 logout.done = ログアウトしました。
-login.failure = ログインに失敗しました。正しいユーザー名とパスワードを入力してください
+login.failure = ログインに失敗しました。正しいIDとパスワードを入力してください
+login.notfound = ログインに失敗しました。IDが見つかりませんでした
 customer.index.title = 顧客情報一覧
 customer.detail.title = 詳細
 customer.create.title = 新規登録
 customer.edit.title = 編集
-customer.save.title = 保存
+customer.save.title = 保存完了
 customer.delete.title = 消去
 customer.search.title = 検索
 
@@ -15,18 +16,18 @@ customer.search.title = 検索
 login.username = ユーザ名
 login.password = パスワード
 login.submit = ログイン
-cust_no = 顧客情報
+cust_no = 顧客番号
 last_nm = 氏
 first_nm = 名
 last_nm_kana = 氏（フリガナ）
 first_nm_kana = 名（フリガナ）
-gender_cd = 性別コード
+gender_cd = 性別
 mail_address = メールアドレス
 tel_no = 電話番号
 birth_date = 誕生日
 home_address = 住所
 post_number = 郵便番号
-reg_dete = 登録日
+reg_date = 登録日
 user_id = ユーザーID
 password = パスワード
 
