バリデーション機能追加。次は検索結果0と顧客番号重複した際のエラー表示を改善する

--- a/src/main/resources/messages_ja.properties
+++ b/src/main/resources/messages_ja.properties
@@ -17,6 +17,7 @@ login.username = ユーザ名
 login.password = パスワード
 login.submit = ログイン
 cust_no = 顧客番号
+check_no = 顧客番号
 last_nm = 氏
 first_nm = 名
 last_nm_kana = 氏（フリガナ）
@@ -34,6 +35,18 @@ password = パスワード
 #navi menu label
 customer.nav.index = 一覧
 customer.nav.create = 新規
+
+#check message
+NotNull = {0}は入力必須です
+Min={0}は{1}以上を入力してください
+Max={0}は{1}以下を入力してください
+Size={0}は{2}文字以上{1}文字以下で入力してください
+Length={0}は{1}文字で入力してください
+Email={0}はメールアドレス形式で入力してください
+Range = {0}は半角数字のみで入力してください
+Number = {0}は半角数字のみで入力してください
+Email = {0}はメールアドレス形式で入力してください
+
 
 # action message
 customer.list.empty = 検索結果がありません
