ヘッダーナビを追加デザイン。

--- a/src/main/resources/messages_ja.properties
+++ b/src/main/resources/messages_ja.properties
@@ -46,6 +46,7 @@ Email={0}はメールアドレス形式で入力してください
 Range = {0}は半角数字のみで入力してください
 Number = {0}は半角数字のみで入力してください
 Email = {0}はメールアドレス形式で入力してください
+NotBlank = {0}は必ず選択してください
 
 
 # action message
