ログイン機能にパスワード変更、新規登録を追加

--- a/src/main/resources/messages_ja.properties
+++ b/src/main/resources/messages_ja.properties
@@ -4,6 +4,11 @@ login.administor.title = 管理人ログイン
 logout.done = ログアウトしました。
 login.failure = ログインに失敗しました。正しいIDとパスワードを入力してください
 login.notfound = ログインに失敗しました。IDが見つかりませんでした
+login.edit.username = ユーザー名を入力してください
+login.edit.password = 新しいパスワードを入力してください
+login.edit.create = 新しいユーザー名とパスワードを入力してください
+login.empty = 入力されたユーザーは存在しません
+login.error = 指定したユーザー名は重複しています。別のユーザー名を入力してください
 customer.index.title = 顧客情報一覧
 customer.detail.title = 詳細
 customer.create.title = 新規登録
