--- a/src/main/resources/messages_ja.properties
+++ b/src/main/resources/messages_ja.properties
@@ -9,6 +9,7 @@ login.edit.password = 新しいパスワードを入力してください
 login.edit.create = 新しいユーザー名とパスワードを入力してください
 login.empty = 入力されたユーザーは存在しません
 login.error = 指定したユーザー名は重複しています。別のユーザー名を入力してください
+login.save = 保存完了しました
 customer.index.title = 顧客情報一覧
 customer.detail.title = 詳細
 customer.create.title = 新規登録
@@ -52,6 +53,7 @@ Range = {0}は半角数字のみで入力してください
 Number = {0}は半角数字のみで入力してください
 Email = {0}はメールアドレス形式で入力してください
 NotBlank = {0}は必ず選択してください
+Pattern = {0}は半角英数字のみで入力してください
 
 
 # action message
